<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HistorySingleActivity"
    android:background="@drawable/fondo2"
    android:id="@+id/layout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<LinearLayout
    android:layout_width="wrap_content"
    android:visibility="gone"
    android:layout_height="wrap_content">
    <fragment
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/map"
        />
</LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:orientation="vertical">
            <TextView
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="From - To"
                android:layout_marginBottom="20sp"
                android:id="@+id/rideLocation"/>
            <TextView
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="distance"
                android:layout_marginBottom="20sp"
                android:id="@+id/rideDistance"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha"
                android:layout_marginBottom="20sp"
                android:textSize="16dp"
                android:id="@+id/rideDate"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/userImage"
                android:src="@mipmap/ic_lavador"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20sp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_completo"
                    android:textSize="18dp"
                    android:layout_marginBottom="20sp"
                    android:id="@+id/userName"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/telefono"
                    android:layout_marginBottom="20sp"
                    android:id="@+id/userPhone"/>
            </LinearLayout>
        </LinearLayout>
        <RatingBar
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:layout_gravity="center"
            android:numStars="5"
            android:stepSize="1"
            android:visibility="gone"/>
        <Button
            android:background="@android:color/holo_blue_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pay"
            android:text="@string/pagar"
            android:visibility="gone"
            android:enabled="false"/>
        <Button
            android:background="@android:color/holo_blue_bright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pagado"
            android:text="@string/pagado"
            android:textColor="@android:color/black"
            android:visibility="gone"
            android:enabled="false"/>

        <LinearLayout
            android:id="@+id/idpagado"
            android:labelFor="@id/pagado"
            android:background="@android:color/background_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:labelFor="@id/pagado"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/catpagar"></TextView>

            <EditText
                android:textColor="@android:color/black"
                android:id="@+id/money"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/icant"
                android:inputType="number"></EditText>
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>